# test-task-ketler

./: .gitignore  README.md  pyproject.toml
src/: main.py
src/api/comment_generator/: api_client.py  comment_generator.py
src/api/external_data_provider/: external_data_provider.py
src/api/google_sheet/: api_client.py  google_sheet.py
src/data/: data_source.py  profile_data_collector.py  profile_data_processor.py
src/interafaces/data_interfaces/: data_collector.py  data_processor.py  data_source.py
src/interafaces/db_interfaces/: repository.py
src/interafaces/external_api_interfaces/: api_client.py  api_comment_generator.py  api_data_processor.py  external_data_provider.py
src/interafaces/service_interfaces/: comment_generator.py  data_parser.py  data_processor.py  external_data_source.py  image_caption_generation.py  table.py
src/services/comment_generation_service/: logic.py
src/services/data_parser_service/: logic.py
src/services/data_processor_service/: logic.py
src/services/external_data_source_service/: logic.py
src/services/google_sheet_table_service/: logic.py
src/services/image_caption_generation_service/: logic.py
